--- a/Focusing/app/src/main/AndroidManifest.xml
+++ b/Focusing/app/src/main/AndroidManifest.xml
@@ -4,14 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/focus_logo"
+        android:icon="@drawable/focus"
         android:label="@string/app_title"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".Intro"
-            android:label="@string/app_title"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -49,7 +48,15 @@
         <activity
             android:name=".WeeklyGoals"
             android:label="@string/app_title"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".usageGraph"
+            android:label="@string/app_title">
+        </activity>
+        <activity android:name=".dailyGraph"
+            android:label="@string/app_title">
+
+        </activity>
     </application>
 
 </manifest>
